Fixed word wrapping while editing a task
Ticket: #10826

--- a/pub/System/TasksAPIPlugin/src/scss/_panel.scss
+++ b/pub/System/TasksAPIPlugin/src/scss/_panel.scss
@@ -562,6 +562,7 @@ div[name="comment"] {
   @include flex();
 
   background-color: $white;
+  max-width: 100%;
   padding-bottom: 12px;
 
   > i {
@@ -572,8 +573,13 @@ div[name="comment"] {
     width: 25px;
   }
 
+  > div {
+    max-width: inherit;
+  }
+
   > div span {
     font-size: 1em;
+    word-break: break-all;
 
     &.title {
       display: block;
